# nrf52-clion-template

./: CMakeLists.txt  README.md  nrf_sdk.cmake
